<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1">
    <TextView
        android:text="@string/row_one"
        android:textSize="6pt"
        android:textColor="#0a7c07"
        android:gravity="center"
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/row_two"
        android:textSize="6pt"
        android:textStyle="bold"
        android:textColor="#0a7c07"
        android:gravity="center"
        android:background="#828d82"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/row_three"
        android:textSize="6pt"
        android:textStyle="bold"
        android:textColor="#0a7c07"
        android:gravity="center"
        android:background="#b1c0b0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/row_four"
        android:textSize="6pt"
        android:textStyle="bold"
        android:textColor="#0a7c07"
        android:gravity="center"
        android:background="#ddf0dd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
  </LinearLayout>
  
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1">
      <TextView
          android:text="@string/column_one"
          android:gravity="center"
		  android:textColor="#000000"
          android:textStyle="bold"
          android:background="#1a7b18"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_weight="1"/>
      <TextView
          android:text="@string/column_two"
          android:gravity="center"
          android:textColor="#000000"
          android:textStyle="bold"
          android:background="#27ba24"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_weight="1"/>
      <TextView
          android:text="@string/column_three"
          android:gravity="center"
          android:textColor="#000000"
          android:textStyle="bold"
          android:background="#36ff31"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_weight="1"/>
  </LinearLayout>
        


</LinearLayout>